scrollbar bug fix

--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,38 @@
 
 *{
   font-family: 'Merriweather', serif;
-  
+    
 }
-  /*zoom: 0.5;*/
+
+::-webkit-scrollbar {
+  width: 6px;
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #000000;
+}
+
+::-webkit-scrollbar-track {
+  display: none;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar:horizontal{
+  display: none;
+  height: 8px;
+  background-color: red;
+}
+::-webkit-scrollbar-thumb:horizontal{
+  background: #000;
+  border-radius: 10px;
+}
 
 body {  
   margin: 0;
   font-family: 'Merriweather', serif;
-    -webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
